Fix horizontal and vertical scrollbars issue

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,13 @@
   text-align: center;
 }
 
+#main-container {
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  overflow: hidden;
+}
+
 .main {
   z-index: 1;
   position: absolute;
